# fun_with_profilers

./: .flake8  .gitignore  README.rst  pyproject.toml
.github/workflows/: main.yml
mandelbrot/: __init__.py  api.py  util.py
mandelbrot/implementations/: numexpr_based.py  numpy_based.py  trivial.py  trivial_multiprocess.py
mandelbrot/profilers/: using_cprofile.py  using_dis.py  using_line_profiler.py  using_memory_profiler.py  using_muppy.py  using_timeit.py  using_tracemalloc.py  using_unix_time.sh
tests/: test_implementations.py  test_profilers.py  test_util.py
