[tool.poetry]
name = "mandelbrot"
version = "0.1.0"
description = "Playing around with profilers via the Mandelbrot set computation problem"
authors = ["elvijs <elvijsdr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
matplotlib = "^3.2.2"
line_profiler = "^3.0.2"
ipython = "^7.15.0"
guppy3 = "^3.0.10"
pympler = "^0.8"
memory_profiler = "^0.57.0"
numexpr = "^2.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
taskipy = "^1.2.1"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^4.3.21"

[tool.taskipy.tasks]
all_checks = "task test && task check_format && task static_checks"
test = "pytest tests"
static_checks = "task mypy && task lint"
mypy = "mypy --ignore-missing-imports mandelbrot"
lint = "flake8 --max-line-length 88 mandelbrot"
format = "task black && task isort"
check_format = "task black --check && task isort --diff"
black = "black mandelbrot"
isort = "isort --atomic mandelbrot/**/*.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
